jellyfin/deployment.yaml
---
# Source: jellyfin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: false
      serviceAccountName: jellyfin
      containers:
        - name: jellyfin
          image: "docker.io/linuxserver/jellyfin:10.8.10"
          volumeMounts:
            - mountPath: /data
              name: nfs-data
            - mountPath: /home/reilly/transmission
              name: nfs-data-old
            - mountPath: /config/cache
              name: jf-cache
            - mountPath: /etc/jellyfin
              name: jf-config
            - mountPath: /config/data
              name: jf-data
            - mountPath: /config/log
              name: jf-logs
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          readinessProbe:
            httpGet:
              port: http
      volumes:
        - name: nfs-data
          nfs:
            server: drebin.riles.xyz
            path: /tank/transmission_k8s_data
            readOnly: true
        - name: nfs-data-old
          nfs:
            server: drebin.riles.xyz
            path: /home/reilly/transmission
            readOnly: true
        - name: jf-cache
          nfs:
            server: drebin.riles.xyz
            path: /ssd_pool/jellyfin_cache_dir
        - name: jf-logs
          nfs:
            server: drebin.riles.xyz
            path: /ssd_pool/jellyfin_log_dir
        - name: jf-data
          nfs:
            server: drebin.riles.xyz
            path: /ssd_pool/jellyfin_data_dir
        - name: jf-config
          nfs:
            server: drebin.riles.xyz
            path: /ssd_pool/jellyfin_config_dir
