jellyfin/ingress.yaml
---
# Source: jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    helm.sh/chart: jellyfin-2.0.0
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/version: "10.8.10"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: le-example-http
    external-dns.alpha.kubernetes.io/hostname: jellyfin.dev-riles.xyz.
    kubernetes.io/ingress.class: nginx
  spec:
    rules:
      - host: "jellyfin.dev-riles.xyz"
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: jellyfin
                  port:
        tls:
        - hosts:
          - jellyfin.dev-riles.xyz
          secretName: tls-jellyfin-ingress-http
